--- a/params.yaml
+++ b/params.yaml
@@ -3,15 +3,15 @@ general:
   bootstrap_helper:         &bootstrap_helper dvc_pipeline/logic/bootstrap_helper.r
   seasonality_helper:         &seasonality_helper dvc_pipeline/logic/seasonality_helper.r
   
-  train_strat_1_raw:        &train_strat_1_raw          data\global_training_period_results\dvc-exps\crash-taka\01_converted_to_xts.rds
-  train_strat_1_result:     &train_strat_1_result       data\global_training_period_results\dvc-exps\crash-taka\09_wf_test_evalued.rds
-  train_strat_1_metric:     &train_strat_1_metric       data\global_training_period_results\dvc-exps\crash-taka\metrics.yaml
-  train_strat_1_positions:  &train_strat_1_positions    data\global_training_period_results\dvc-exps\crash-taka\04_positions.rds
-  train_strat_1_wf_indexes: &train_strat_1_wf_indexes   data\global_training_period_results\dvc-exps\crash-taka\06_wf_indexes.rds
-  train_strat_2_result:     &train_strat_2_result       data\global_training_period_results\dvc-exps\liney-jass\09_wf_test_evalued.rds
-  train_strat_2_metric:     &train_strat_2_metric       data\global_training_period_results\dvc-exps\liney-jass\metrics.yaml
-  train_strat_2_positions:  &train_strat_2_positions    data\global_training_period_results\dvc-exps\crash-taka\04_positions.rds  
-  train_strat_2_wf_indexes: &train_strat_2_wf_indexes   data\global_training_period_results\dvc-exps\liney-jass\06_wf_indexes.rds
+  train_strat_1_raw:        &train_strat_1_raw          data\global_training_period_results\dvc-exps\TRAIN_7_TEST_28_BTC_crash-taka\01_converted_to_xts.rds
+  train_strat_1_result:     &train_strat_1_result       data\global_training_period_results\dvc-exps\TRAIN_7_TEST_28_BTC_crash-taka\09_wf_test_evalued.rds
+  train_strat_1_metric:     &train_strat_1_metric       data\global_training_period_results\dvc-exps\TRAIN_7_TEST_28_BTC_crash-taka\metrics.yaml
+  train_strat_1_positions:  &train_strat_1_positions    data\global_training_period_results\dvc-exps\TRAIN_7_TEST_28_BTC_crash-taka\04_positions.rds
+  train_strat_1_wf_indexes: &train_strat_1_wf_indexes   data\global_training_period_results\dvc-exps\TRAIN_7_TEST_28_BTC_crash-taka\06_wf_indexes.rds
+  train_strat_2_result:     &train_strat_2_result       data\global_training_period_results\dvc-exps\TRAIN_14_TEST_10_BTC_liney-jass\09_wf_test_evalued.rds
+  train_strat_2_metric:     &train_strat_2_metric       data\global_training_period_results\dvc-exps\TRAIN_14_TEST_10_BTC_liney-jass\metrics.yaml
+  train_strat_2_positions:  &train_strat_2_positions    data\global_training_period_results\dvc-exps\TRAIN_14_TEST_10_BTC_liney-jass\04_positions.rds  
+  train_strat_2_wf_indexes: &train_strat_2_wf_indexes   data\global_training_period_results\dvc-exps\TRAIN_14_TEST_10_BTC_liney-jass\06_wf_indexes.rds
   
   train_strat_1_cost_sens: &train_strat_1_cost_sens   data_to_share\15_cost_sensitivitiy.rds
   train_strat_1_cost_sens_stats: &train_strat_1_cost_sens_stats   data_to_share\15_cost_sensitivitiy_stats.rds
@@ -30,7 +30,7 @@ general:
   unseen_strat_2_metric:  &unseen_strat_2_metric     data\unseen_period_results\dvc-exps\TRAIN_14_TEST_10_BTC_incog-caps\metrics.yaml 
   unseen_strat_3_metric:  &unseen_strat_3_metric     data\unseen_period_results\dvc-exps\TRAIN_7_TEST_28_ETH_crack-torc\metrics.yaml
   unseen_strat_4_metric:  &unseen_strat_4_metric     data\unseen_period_results\dvc-exps\TRAIN_14_TEST_10_ETH_blear-taco\metrics.yaml
-  unseen_strat_5_metric:  &unseen_strat_5_metric     data\unseen_period_results\dvc-exps-exp\TRAIN_7_TEST_28_BNB_telic-ions\metrics.yaml
+  unseen_strat_5_metric:  &unseen_strat_5_metric     data\unseen_period_results\dvc-exps\TRAIN_7_TEST_28_BNB_telic-ions\metrics.yaml
   unseen_strat_6_metric:  &unseen_strat_6_metric     data\unseen_period_results\dvc-exps\TRAIN_14_TEST_10_BNB_varus-puck\metrics.yaml
 
   unseen_strat_1_eq_curve: &unseen_strat_1_eq_curve     data_to_share\11_01_BTC_7_28_equity_curve_xts.rds
@@ -194,7 +194,7 @@ general:
   script: dvc_pipeline/function_caller.r  
   helper: *bootstrap_helper  
   args:
-    - 1000#365*24#3        #no_iter#freq#seed
+    - 10#365*24#3        #no_iter#freq#seed
   funs:
     - readRDS
     - prepare_and_execute_position_bootstrap
@@ -215,7 +215,7 @@ general:
   script: dvc_pipeline/function_caller.r  
   helper: *bootstrap_helper
   args:
-    - 1000#365*24#3        #no_iter#freq#seed
+    - 10#365*24#3        #no_iter#freq#seed
   funs:
     - readRDS
     - prepare_and_execute_ma_bootstrap
